# reg-machine

./: LICENSE  README.md  reg-machine.cabal
src/: RegMachine.hs
