name:                reg-machine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rpereira/reg-machine#readme
license:             BSD3
license-file:        LICENSE
author:              Rui Afonso Pereira
maintainer:          ruiafonsopereira@gmail.com
copyright:           2017 Rui Afonso Pereira
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable reg-machine
  hs-source-dirs:      src
  main-is:             RegMachine.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
